# mexico-repair-flow

./: README.md  pyproject.toml
.axentx-dev-bot/: 20260623-105450-mexico-repair-flow-docs-0b0e057e.md
business/: breakeven.md  business-model-canvas.md  customer-journey.md  dataflow.md  marketing-plan.md  partner-targets.md  tech-spec.md  user-stories.md
docs/: BMC.md  PRD.md  REQUIREMENTS.md  ROADMAP.md  STORIES.md  TECH_SPEC.md
src/: customer.py  inventory.py  invoice.py  mexico_repair_flow.py  password_reset.py  quote_generator.py  quote_manager.py  sync.py
tests/: test_customer.py  test_inventory.py  test_invoice.py  test_mexico_repair_flow.py  test_password_reset.py  test_quote_generator.py  test_quote_manager.py  test_sync.py
