[project]
name = "mexico-repair-flow"
version = "0.1.0"
description = "Simple in‑memory quote generation for vehicle repair technicians."
authors = [{name = "Axentx OS"}]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
